update class 1 notebook

--- a/notebooks/class-1.ipynb
+++ b/notebooks/class-1.ipynb
@@ -22,6 +22,90 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "aae5d8dc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e9a0ef7",
+   "metadata": {},
+   "source": [
+    "## 习题1.2 第3 题"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4138d820",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import sympy as sp\n",
+    "\n",
+    "def LagrangePolynomial(xs, ys):\n",
+    "    X = sp.symbols(\"x\")\n",
+    "    assert len(xs) == len(ys)\n",
+    "    y = 0\n",
+    "    for k in range(len(xs)):\n",
+    "        t = 1\n",
+    "        for j in range(len(xs)):\n",
+    "            if j != k:\n",
+    "                t = t * ( (X - xs[j]) / (xs[k] - xs[j]) )\n",
+    "        y += t * ys[k]\n",
+    "    return sp.simplify(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac5a3d61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xs = np.array([1, 2, 3, 4])\n",
+    "ys = np.array([2, 7, 16, 29])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dde4ceb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LagrangePolynomial(xs, ys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1196cff2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1304488",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5403469",
+   "metadata": {},
+   "source": [
+    "## 习题1.3 第2 题"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8e4f9daa",
    "metadata": {},
    "outputs": [],
