--- a/content/class-1.tex
+++ b/content/class-1.tex
@@ -1,6 +1,6 @@
 
-\renewcommand{\newpageorvspace}{\newpage}
-% \renewcommand{\newpageorvspace}{\vspace{2em}}
+% \renewcommand{\newpageorvspace}{\newpage}
+\renewcommand{\newpageorvspace}{\vspace{2em}}
 
 \date{2022-09-09  第一次习题课}
 \author{}
@@ -9,7 +9,7 @@
 
 \maketitle
 
-\larger[2]
+% \larger[2]
 
 {\bf 习题1.2 第3题} 已知两个变量$x,y$之间有某种函数关系$y=f(x)$，并且有如下对应值
 \begin{table}[H]
