--- a/content/class-2.tex
+++ b/content/class-2.tex
@@ -128,4 +128,26 @@ D(a_{ii}, R_{i}) & = \left\{ x \in \mathbb{C} \ |\ \lvert x - a_{ii} \rvert \leq
 那么$A$的每个{\color{red}特征值}都落在某个$D(a_{ii}, R_{i})$中。
 \end{quote}
 
+\newpageorvspace
+
+{\bf 习题2.3 第7题}. 求证：两个齐次线性方程组(I), (II)同解的充分必要条件是他们互为线性组合。
+
+\newpageorvspace
+
+{\bf 证明}： 考虑齐次线性方程组$A_1X = 0$与$A_2X = 0,$ 其中$A_1, A_2$分别是$m_1\times n$与$m_2\times n$的矩阵。将$A_1, A_2$的行向量组分别记作$S_1, S_2$, 那么线性方程组$\begin{pmatrix}A_1 \\ A_2\end{pmatrix} X = 0$的行向量组即为$S_1 \cup S_2$. 对于齐次线性方程组，我们知道
+$$\left( \begin{pmatrix}A_1 \\ A_2\end{pmatrix} X = 0 \text{ 的解空间 } \right) = \left( A_1 X = 0 \text{ 的解空间 } \right) \cap \left( A_2X = 0 \text{ 的解空间 } \right)$$
+那么
+\begin{align*}
+& ~~ A_1X = 0 \text{ 与 } A_2X = 0 \text{ 同解 } \\
+\Longleftrightarrow & ~~ A_1X = 0, A_2X = 0, \begin{pmatrix}A_1 \\ A_2\end{pmatrix} X = 0 \text{ 同解 } \\
+\Longleftrightarrow & ~~ \operatorname{rank} S_1 = \operatorname{rank} (S_1 \cup S_2) = \operatorname{rank} S_2 \\
+\Longleftrightarrow & ~~ S_1, S_2 \text{ 线性等价 }
+\end{align*}
+最后一个等价是根据习题2.3 第6题。倒数第二个等价的解释如下：
+
+$\begin{pmatrix}A_1 \\ A_2\end{pmatrix} X = 0$的解空间是$A_1X = 0$(或$A_2X = 0$)的子空间，其维数分别为$n - \operatorname{rank} (S_1\cup S_2)$以及$n - \operatorname{rank} S_1$(或者$n - \operatorname{rank} S_2$)。一个线性空间与它的一个子空间相等，当且仅当他们维数是相等的，即
+$$n - \operatorname{rank} (S_1\cup S_2) = n - \operatorname{rank} S_1 ~~ (\text{或} ~~ n - \operatorname{rank} S_2),$$
+即
+$$\operatorname{rank} (S_1\cup S_2) = \operatorname{rank} S_1 ~~ (\text{或} ~~ \operatorname{rank} S_2).$$
+
 \end{document}
