update the list of assignments

--- a/common_preamble.tex
+++ b/common_preamble.tex
@@ -13,7 +13,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% this file contains common preambles for the notes/articles, etc. (other than beamer)
+% This file contains common preambles for the notes/articles, etc. (other than beamer)
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
