--- a/notebooks/习题.ipynb
+++ b/notebooks/习题.ipynb
@@ -11,13 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e6cfe158",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "# ^^^ pyforest auto-imports - don't write above this line\n"
+    "# ^^^ pyforest auto-imports - don't write above this line\n",
+    "import sympy as sp"
    ]
   },
   {
@@ -27,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install numpy"
+    "# !pip install numpy sympy"
    ]
   },
   {
@@ -43,7 +44,7 @@
    "id": "56b3c6df",
    "metadata": {},
    "source": [
-    "# 习题2.1 "
+    "## 习题2.1"
    ]
   },
   {
@@ -51,7 +52,7 @@
    "id": "3e9a0ef7",
    "metadata": {},
    "source": [
-    "## 第 2 题"
+    "### 第 2 题"
    ]
   },
   {
@@ -87,9 +88,328 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "b4e1be2d",
+   "metadata": {},
+   "source": [
+    "## 习题2.3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "199cc123",
+   "metadata": {},
+   "source": [
+    "### 第1题"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "5dfcfbcd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('import numpy as np'); }\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('import numpy as np'); }\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('import numpy as np'); }\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([-76.,  41., -16.])"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat = np.array([3,1,0,6,3,2,1,3,5]).reshape((3,3)).T\n",
+    "beta = np.array([2,-1,2]).T\n",
+    "np.linalg.solve(mat, beta)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b410a5a8",
+   "metadata": {},
+   "source": [
+    "### 第3题"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ede5c167",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('import numpy as np'); }\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('import numpy as np'); }\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('import numpy as np'); }\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1. -1. -2. -4.]\n",
+      "[0. 1. 1. 2.]\n",
+      "[0. 0. 1. 1.]\n",
+      "[0. 0. 0. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "alpha = np.array([1,1,1,1,0,1,-1,-1,0,0,1,-1,0,0,0,1]).reshape((4,4)).T\n",
+    "e = np.eye(4)\n",
+    "coeff = np.linalg.inv(alpha) @ e\n",
+    "for idx in range(4):\n",
+    "    print(coeff[:, idx])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cfb68ea",
+   "metadata": {},
+   "source": [
+    "### 第4题"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "ffac55c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}\\tau_{0} + 2 \\tau_{1} + 3 \\tau_{2}\\\\- 2 \\tau_{0} - 3 \\tau_{1} - 4 \\tau_{2}\\\\\\tau_{0}\\\\\\tau_{1}\\\\\\tau_{2}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[   tau0 + 2*tau1 + 3*tau2],\n",
+       "[-2*tau0 - 3*tau1 - 4*tau2],\n",
+       "[                     tau0],\n",
+       "[                     tau1],\n",
+       "[                     tau2]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# (1)\n",
+    "mat = sp.Matrix(np.array([1,1,1,1,1,1,2,3,4,5,1,0,-1,-2,-3]).reshape(3,5))\n",
+    "b = sp.Matrix(np.zeros((3,1)))\n",
+    "\n",
+    "x, params, free_var_index = mat.gauss_jordan_solve(b, freevar=True)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "5559b832",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}- \\tau_{0} + 2 \\tau_{1}\\\\- \\tau_{0} + 2 \\tau_{1}\\\\\\tau_{0}\\\\\\tau_{0}\\\\\\tau_{1}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[-tau0 + 2*tau1],\n",
+       "[-tau0 + 2*tau1],\n",
+       "[          tau0],\n",
+       "[          tau0],\n",
+       "[          tau1]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# (2)\n",
+    "mat = sp.Matrix(np.array([1,1,1,1,-4,1,-2,3,-4,2,-1,3,-5,7,-4,1,2,-1,4,-6]).reshape(4,5))\n",
+    "b = sp.Matrix(np.zeros((4,1)))\n",
+    "\n",
+    "x, params, free_var_index = mat.gauss_jordan_solve(b, freevar=True)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "321ec8ce",
+   "metadata": {},
+   "source": [
+    "### 第5题"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "9b1f315a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}6 \\tau_{0} + 16 \\tau_{1}\\\\\\tau_{0} + 6 \\tau_{1}\\\\- 4 \\tau_{0} - 11 \\tau_{1}\\\\\\tau_{0}\\\\\\tau_{1}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[ 6*tau0 + 16*tau1],\n",
+       "[    tau0 + 6*tau1],\n",
+       "[-4*tau0 - 11*tau1],\n",
+       "[             tau0],\n",
+       "[             tau1]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = sp.Matrix(np.array([1,2,3,4,5,1,-1,1,-1,1,1,2,4,8,16]).reshape(3,5))\n",
+    "b = sp.Matrix(np.zeros((3,1)))\n",
+    "\n",
+    "A, params, free_var_index = X.gauss_jordan_solve(b, freevar=True)\n",
+    "A"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52226b54",
+   "id": "1274d1cf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed321b54",
+   "metadata": {},
+   "source": [
+    "## 习题2.4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63c1da66",
+   "metadata": {},
+   "source": [
+    "### 第1题"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "5cbb6eda",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = np.array([1,1,1,1,1,1,2,3,4,5,1,0,-3,-2,-3]).reshape((3,5))\n",
+    "np.linalg.matrix_rank(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37dc46bf",
    "metadata": {},
    "outputs": [],
    "source": []
