--- a/content/class-3.tex
+++ b/content/class-3.tex
@@ -103,4 +103,31 @@ A = \begin{pmatrix}
 $$
 若$\alpha_1,\cdots,\alpha_n$线性无关，则只需要$1-\lambda^{n} \neq 0$，即$\lambda$不取$n$次单位根$e^{2k\pi i/n},$ $k = 0, \ldots, n-1,$ 即可使$\alpha_1-\lambda\alpha_2,\cdots,\alpha_n-\lambda\alpha_1$线性无关。
 
+\newpageorvspace
+
+{\bf 习题2.5 第4题}. 设向量组$S = \{ \alpha_1, \ldots, \alpha_s \}$线性无关，并且可以由向量组$T = \{ \beta_1, \ldots, \beta_t \}$线性表出。求证：
+
+(1) 向量组$T$与向量组$S \cup T$等价。
+
+(2) 将$S$扩充为$S \cup T$的一个极大线性无关组$T_1 = \{ \alpha_1, \ldots, \alpha_s, \beta_{i_1}, \ldots, \beta_{i_k} \},$ 则$T_1$与$T$线性等价，且$s+k \leqslant t.$
+
+(3) (Steinitz替换定理) 可以用向量$\alpha_1, \ldots, \alpha_s$替换向量$\beta_1, \ldots, \beta_t$中某$s$个向量$\beta_{i_1}, \ldots, \beta_{i_s},$ 使得得到的向量组$\{ \alpha_1, \ldots, \alpha_s, \beta_{i_{s+1}}, \ldots, \beta_{i_t} \}$与$\{ \beta_1, \ldots, \beta_t \}$等价。
+
+\newpageorvspace
+
+{\bf 证明}： (1) 首先，向量组$S\cup T$显然能线性表出它的子集$T$. 另一方面，由于向量组$T$能线性表出向量组$S,$ 所以向量组$T = T\cup T$能线性表出向量组$S\cup T.$ 于是向量组$T$与向量组$S \cup T$能够相互线性表出，从而是线性等价的。
+
+(2) \textbf{\color{red}注意！这里$T_1$不是$T$的子集！}
+
+由线性等价的传递性，我们只要证明向量组$T_1$与向量组$S \cup T$线性等价即可。由于$T_1$是$S \cup T$的子集，我们只要证明$S \cup T$能被$T_1$线性表出即可。更进一步，只要证明任取向量$\gamma \in (S \cup T) \setminus T_1,$ 有$\gamma$能被$T_1$中的向量线性表出即可。假设不然，则存在不全为0的数$\lambda_0, \lambda_1, \ldots, \lambda_{s+k},$ 使得
+$$0 = \lambda_0 \gamma + \lambda_1 \alpha_1 + \cdots + \lambda_s \alpha_s + \lambda_{s+1} \beta_{i_1} + \cdots + \lambda_{s+k} \beta_{i_k}$$
+$\lambda_0$不能为0，否则会与$T_1$是线性无关组矛盾，于是
+$$\gamma = -\dfrac{\lambda_1}{\lambda_0} \alpha_1 - \cdots - -\dfrac{\lambda_s}{\lambda_0} \alpha_s - \dfrac{\lambda_{s+1}}{\lambda_0} \beta_{i_1} - \cdots - \dfrac{\lambda_{s+k}}{\lambda_0} \beta_{i_k}$$
+于是我们就证明了$T_1$, $S \cup T$, $T$是线性等价的，那么它们的秩就都相等
+$$s+k = \operatorname{rank}(T_1) = \operatorname{rank}(T) \leqslant \# T = t.$$
+
+(3) 我们利用第(2)问中的结论，将$S$扩充为$S \cup T$的一个极大线性无关组$T_1$, 设其元素个数为$s+k.$ 我们从$T$中不在$T_1$中的向量（总共有$t - k \geqslant s$个）随意挑出$s$个，那么剩下的向量与$S$并在一起得到的向量组，记作$T_2,$就满足
+$$T_1 \subseteq T_2 \subseteq S \cup T.$$
+因为$T_1$是$S \cup T$的极大线性无关组，所以$T_1, T_2, S \cup T$三者线性等价，从而与$T$线性等价。
+
 \end{document}
