--- a/content/class-3.tex
+++ b/content/class-3.tex
@@ -11,6 +11,52 @@
 
 % \larger[2]
 
+{\bf 第一题}. 设$V_1, V_2$是$\mathbb{F}$上线性空间，$f$是$V_1$到$V_2$的一个同构映射，证明$f^{-1}$是$V_2$到$V_1$的同构映射。
+
+\newpageorvspace
+
+{\bf 证明}： 
+
+\newpageorvspace
+
+{\bf 习题2.8 第3题}. 求多项式$f(x)$使$f(1) = 1, f(2) = 2, f(3) = 4.$ 这样的多项式$f(x)$是否可能是整系数多项式？
+
+\newpageorvspace
+
+{\bf 解}： 一般给定$n$个点$(x_1,y_1), \dots, (x_n,y_n)$， 其中$x_1, \cdots, x_n$互不相同，则有拉格朗日插值多项式
+\begin{gather*}
+L(x) = \sum_{i=1}^{n}y_{i}\ell_{i}(x) \\
+\text{其中， } \ell_{i}(x) = \prod_{\begin{smallmatrix}1\leq \leq k \\ j\neq i\end{smallmatrix}}{\frac {x-x_{j}}{x_{i}-x_{j}}}={\frac {(x-x_{0})}{(x_{i}-x_{0})}}\cdots {\frac {(x-x_{i-1})}{(x_{i}-x_{i-1})}}{\frac {(x-x_{i+1})}{(x_{i}-x_{i+1})}}\cdots {\frac {(x-x_{n})}{(x_{i}-x_{n})}},
+\end{gather*}
+满足$L(x_i) = y_i, i=1, \dots ,n$。本题对应的拉格朗日插值多项式为$f(x) = L(x) = \dfrac{1}{2}x^2 - \dfrac{1}{2}x + 1$. 这是之前习题课讲过的知识。当然也存在更高次多项式满足题目条件，例如$(x-1)^n(x-2)^m(x-3)^k + L(x)$.
+
+假设存在整系数的多项式$f(x)$满足题设条件，那么考察$g(x) = f(x) - L(x).$ 由于$1, 2, 3$是$g(x)$的根，于是存在多项式$h(x)$使得
+$$g(x) = f(x) - L(x) = (x-1)(x-2)(x-3) h(x)$$
+于是在$\mathbb{R}[X]$中有
+$$f(x) \equiv L(x) \mod (x-1)(x-2)(x-3)$$
+由于$f(X)$在$\mathbb{R}[x]$中利用辗转相除法除以$(x-1)(x-2)(x-3)$所得的商多项式与余多项式都是整系数的，所以上式不可能成立。
+
+\newpageorvspace
+
+{\bf 第三题}. 已知$\mathbb{F}$上线性空间$V$的有限个真子空间之并不等于$V.$ 若$\dim(V) = n,$ $V_1, \ldots, V_s$是$V$的$s$个真子空间。证明$\displaystyle V \setminus \bigcup_{i=1}^s V_i$中包含$V$的一组基。
+
+\newpageorvspace
+
+{\bf 证明}： 由于$\displaystyle \bigcup_{i=1}^s V_i \subsetneq V$, 所以可以从$V \setminus \bigcup_{i=1}^s V_i \neq \emptyset$中取到至少一个（非零）向量，记作$\alpha_1.$ 令$W_1 = \operatorname{span}_{\mathbb{F}}\{\alpha_1\},$ 那么$W_1$是$V$的真子空间。于是，我们可以从$V \setminus \left( W_1 \cup \left( \bigcup_{i=1}^s V_i \right) \right) \neq \emptyset$中取到（非零）向量$\alpha_2,$ 并令$W_2 = \operatorname{span}_{\mathbb{F}}\{\alpha_1, \alpha_2\}$. 由于$\alpha_2 \not\in W_1$, 所以$\dim W_2 = 2$.
+
+依此方法，我们可以取到$\alpha_1, \alpha_2, \ldots, \alpha_{n-1}$, 以及相应的$W_i = \operatorname{span}_{\mathbb{F}}\{\alpha_1, \ldots, \alpha_i\}, \dim (W_i) = i, i=1, \ldots, n-1$. 最后考察$V \setminus \left( W_{n-1} \cup \left( \bigcup_{i=1}^s V_i \right) \right) \neq \emptyset,$ 从这个集合中取（非零）向量$\alpha_n$. 这样我们就得到了$V$的一组基$\alpha_1, \ldots, \alpha_n.$
+
+\newpageorvspace
+
+{\bf 第四题}. 给定$n$元排列$(j_1j_2\cdots j_n),$ 若$\tau(j_1j_2\cdots j_n) = r,$ 求$n$元排列$(j_n\cdots j_2j_1)$的逆序数$\tau(j_n\cdots j_2j_1)$.
+
+\newpageorvspace
+
+{\bf 解}： 一个$n$元排列的序关系总共有$n(n-1)/2$对。排列$(j_1j_2\cdots j_n)$中的顺序关系是排列$(j_n\cdots j_2j_1)$中的逆序关系；排列$(j_1j_2\cdots j_n)$中的逆序关系是排列$(j_n\cdots j_2j_1)$中的顺序关系。因此
+$$\tau(j_n\cdots j_2j_1) = n(n-1)/2 - \tau(j_1j_2\cdots j_n) = n(n-1)/2 - r.$$
+
+\newpageorvspace
+
 {\bf 习题2.1 第7题}. (1). 若$\alpha_1, \ldots, \alpha_n$线性无关，问$\alpha_1 + \alpha_2, \alpha_2 + \alpha_3, \ldots, \alpha_{n-1} + \alpha_n, \alpha_n + \alpha_1$是否一定线性无关？为什么？
 
 (2). 若$\alpha_1, \ldots, \alpha_n$线性相关，问$\alpha_1 + \alpha_2, \alpha_2 + \alpha_3, \ldots, \alpha_{n-1} + \alpha_n, \alpha_n + \alpha_1$是否一定线性相关？为什么？
