--- a/content/class-3.tex
+++ b/content/class-3.tex
@@ -11,6 +11,34 @@
 
 % \larger[2]
 
+非空集合$A$到$B$的映射$f: A \to B$指的是某种规则，使得对于$A$中的元素$x$, 有$B$中的{\color{red}唯一}的一个元素与之对应，记作$f(x)\in B$. 对于映射，我们要掌握的概念主要由
+
+\begin{itemize}
+\item 单射：$B$中元素的原像至多有一个，即
+$$f(x_1) = f(x_2) \Longrightarrow x_1 = x_2.$$
+\item 满射：$B$中每个元素都至少有一个原像，即
+$$\forall y\in B, \exists x\in A, \text{ 使得 } f(x) = y.$$
+\item 双射（一一映射）：同时是单射与满射的映射，即集合$A, B$在规则$f$下有一一对应：
+$$\forall y\in B, \exists! x\in A, \text{ 使得 } f(x) = y.$$
+\end{itemize}
+
+线性空间在集合之上加了一些结构（加法，数乘），因此在大部分时候，我们考察的线性空间之间的映射的范围要缩小一些，即这个映射不仅仅是集合之间的映射，还要求它保持线性空间的结构。我们把满足保持线性空间结构的映射就称之为线性空间之间的同态映射（homomorphism），意思就是保持（homo $\to$ same）形态（morph $\to$ shape）的映射，也称作线性映射。书上的线性映射的条件可以合并为一个
+$$f(\lambda_1 x_1 + \lambda_2 x_2) = \lambda_1 f(x_1) + \lambda_2 f(x_2).$$
+
+关于线性映射$f: A \to B$的核（kernel），像（image）等概念和性质，可以用下面的交换图表总结：
+
+$$
+\begin{tikzcd}[row sep = large]
+& & {\color{cyan} K'} \arrow[d, "i'"', cyan] \arrow[ld, dashed, "\exists ! j_1"', cyan] \arrow[rd, "f\circ i' = 0"', near start, cyan] & {\color{red} C'} \\
+0 \arrow[r] & K \arrow[r, "i", "\ker (f)"'] & A \arrow[r, "f"] \arrow[d, "\bar{p}"'] \arrow[ur, "p'\circ f = 0", near end, red] & B \arrow[r, "p", "\operatorname{coker} (f)"'] \arrow[u, "p'", red] & C \arrow[r] \arrow[lu, dashed, "\exists ! j_2"', red] & 0 \\
+& & \operatorname{coker} (i) =: \operatorname{coim} (f) \arrow[r, dashed, "\exists ! \bar{f}"'] \arrow[d] \arrow[ur, dashed, "\exists ! f_1", near start] & \operatorname{im} (f) := \ker (p) \arrow[u, "\bar{i}"'] \\[-3ex]
+& & 0 & 0 \arrow[u]
+\end{tikzcd}
+$$
+
+\newpageorvspace
+
+
 {\bf 第一题}. 设$V_1, V_2$是$\mathbb{F}$上线性空间，$f$是$V_1$到$V_2$的一个同构映射，证明$f^{-1}$是$V_2$到$V_1$的同构映射。
 
 \newpageorvspace
