--- a/2021-archive/content/class-2.tex
+++ b/2021-archive/content/class-2.tex
@@ -65,7 +65,7 @@ $$V_1\cup V_2\cup \cdots \cup V_s \subsetneqq V$$
 考虑集合$S = \mathbb{F}v + u$. 有$S\cap V_i=\emptyset$, 否则能推出$u\in V_i$，与$u$的取法矛盾。由假设$V_1\cup V_2\cup \cdots \cup V_s = V$，那么$S\subseteq \bigcup\limits_{j\neq i} V_j$。与此同时，$S$与每一个$V_j (j\neq i)$的交集至多含有一个元素。因为假设存在$V_j$使得有$\lambda_1v+u, \lambda_2v+u \in V_j\cap S$, $\lambda_1\neq\lambda_2 \in \mathbb{F}$, 由于$V_j$是线性子空间，有$(\lambda_1v+u) - (\lambda_2v+u) = (\lambda_1 - \lambda_2)v \in V_j$，这与$v$的取法矛盾。于是
 $$S = S\cap (\bigcup\limits_{j\neq i} V_j) = \bigcup\limits_{j\neq i} (S \cap V_j)$$
 那么$S = \mathbb{F}v + u$的元素个数即不能超过$s-1$，这与域$\mathbb{F}$是特征为0的域，元素个数无穷多是矛盾的。所以$V_1\cup V_2\cup \cdots \cup V_s = V$的假设不成立。因此，对任意正整数$s$，以及$V$的真子空间$V_1,\cdots,V_s$，都有
-$$V_1\cup V_2\cup \cdots \cup V_s \subsetneqq V。$$
+$$V_1\cup V_2\cup \cdots \cup V_s \subsetneqq V.$$
 
 \newpageorvspace
 
