--- a/notebooks/习题.ipynb
+++ b/notebooks/习题.ipynb
@@ -11,19 +11,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e6cfe158",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import sympy as sp\n",
     "# ^^^ pyforest auto-imports - don't write above this line\n",
     "import sympy as sp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d88e914f",
    "metadata": {},
    "outputs": [],
@@ -65,21 +66,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "4138d820",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# (1)\n",
     "A = np.array([2,0,-1,2,0,-2,1,-3,3,-1,2,1,-2,4,-7,5]).reshape((4,4))\n",
@@ -88,21 +78,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1196cff2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# (2)\n",
     "A = np.array([1,-1,0,0,0,1,-1,0,0,0,1,-1,-1,0,0,1]).reshape((4,4))\n",
@@ -135,21 +114,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "5dfcfbcd",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-76.,  41., -16.])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mat = np.array([3,1,0,6,3,2,1,3,5]).reshape((3,3)).T\n",
     "beta = np.array([2,-1,2]).T\n",
@@ -166,21 +134,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ede5c167",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 1. -1. -2. -4.]\n",
-      "[0. 1. 1. 2.]\n",
-      "[0. 0. 1. 1.]\n",
-      "[0. 0. 0. 1.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "alpha = np.array([1,1,1,1,0,1,-1,-1,0,0,1,-1,0,0,0,1]).reshape((4,4)).T\n",
     "e = np.eye(4)\n",
@@ -199,29 +156,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "ffac55c7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}\\tau_{0} + 2 \\tau_{1} + 3 \\tau_{2}\\\\- 2 \\tau_{0} - 3 \\tau_{1} - 4 \\tau_{2}\\\\\\tau_{0}\\\\\\tau_{1}\\\\\\tau_{2}\\end{matrix}\\right]$"
-      ],
-      "text/plain": [
-       "Matrix([\n",
-       "[   tau0 + 2*tau1 + 3*tau2],\n",
-       "[-2*tau0 - 3*tau1 - 4*tau2],\n",
-       "[                     tau0],\n",
-       "[                     tau1],\n",
-       "[                     tau2]])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# (1)\n",
     "mat = sp.Matrix(np.array([1,1,1,1,1,1,2,3,4,5,1,0,-1,-2,-3]).reshape(3,5))\n",
@@ -233,29 +171,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "5559b832",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}- \\tau_{0} + 2 \\tau_{1}\\\\- \\tau_{0} + 2 \\tau_{1}\\\\\\tau_{0}\\\\\\tau_{0}\\\\\\tau_{1}\\end{matrix}\\right]$"
-      ],
-      "text/plain": [
-       "Matrix([\n",
-       "[-tau0 + 2*tau1],\n",
-       "[-tau0 + 2*tau1],\n",
-       "[          tau0],\n",
-       "[          tau0],\n",
-       "[          tau1]])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# (2)\n",
     "mat = sp.Matrix(np.array([1,1,1,1,-4,1,-2,3,-4,2,-1,3,-5,7,-4,1,2,-1,4,-6]).reshape(4,5))\n",
@@ -275,29 +194,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "9b1f315a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}6 \\tau_{0} + 16 \\tau_{1}\\\\\\tau_{0} + 6 \\tau_{1}\\\\- 4 \\tau_{0} - 11 \\tau_{1}\\\\\\tau_{0}\\\\\\tau_{1}\\end{matrix}\\right]$"
-      ],
-      "text/plain": [
-       "Matrix([\n",
-       "[ 6*tau0 + 16*tau1],\n",
-       "[    tau0 + 6*tau1],\n",
-       "[-4*tau0 - 11*tau1],\n",
-       "[             tau0],\n",
-       "[             tau1]])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "X = sp.Matrix(np.array([1,2,3,4,5,1,-1,1,-1,1,1,2,4,8,16]).reshape(3,5))\n",
     "b = sp.Matrix(np.zeros((3,1)))\n",
@@ -332,21 +232,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "5cbb6eda",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "X = np.array([1,1,1,1,1,1,2,3,4,5,1,0,-3,-2,-3]).reshape((3,5))\n",
     "np.linalg.matrix_rank(X)"
@@ -355,7 +244,108 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37dc46bf",
+   "id": "e967ea78",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4b3acb7",
+   "metadata": {},
+   "source": [
+    "## 习题2.8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae7f2ddb",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "### 第三题"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6316629c",
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "def LagrangePolynomial(xs, ys):\n",
+    "    X = sp.symbols(\"x\")\n",
+    "    assert len(xs) == len(ys)\n",
+    "    y = 0\n",
+    "    for k in range(len(xs)):\n",
+    "        t = 1\n",
+    "        for j in range(len(xs)):\n",
+    "            if j != k:\n",
+    "                t = t * ( (X - xs[j]) / (xs[k] - xs[j]) )\n",
+    "        y += t * ys[k]\n",
+    "    return sp.simplify(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ac78be4",
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "xs = np.array([1, 2, 3])\n",
+    "ys = np.array([1, 2, 4])\n",
+    "\n",
+    "LagrangePolynomial(xs, ys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3bbb7a17",
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c01fd777",
+   "metadata": {},
+   "source": [
+    "# 第3章 行列式"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2977485f",
+   "metadata": {},
+   "source": [
+    "## 习题3.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ad3f08e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = sp.Symbol(\"x\")\n",
+    "A = sp.Matrix([[x,1,2,3],[x,x,1,2],[2,3,x,1],[x,2,3,x]])\n",
+    "A.det()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92f75347",
    "metadata": {},
    "outputs": [],
    "source": []
