--- a/notebooks/习题.ipynb
+++ b/notebooks/习题.ipynb
@@ -18,8 +18,9 @@
    "source": [
     "import numpy as np\n",
     "import sympy as sp\n",
-    "# ^^^ pyforest auto-imports - don't write above this line\n",
-    "import sympy as sp"
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -72,7 +73,7 @@
    "outputs": [],
    "source": [
     "# (1)\n",
-    "A = np.array([2,0,-1,2,0,-2,1,-3,3,-1,2,1,-2,4,-7,5]).reshape((4,4))\n",
+    "A = np.array([2, 0, -1, 2, 0, -2, 1, -3, 3, -1, 2, 1, -2, 4, -7, 5]).reshape((4, 4))\n",
     "np.linalg.matrix_rank(A)"
    ]
   },
@@ -84,7 +85,7 @@
    "outputs": [],
    "source": [
     "# (2)\n",
-    "A = np.array([1,-1,0,0,0,1,-1,0,0,0,1,-1,-1,0,0,1]).reshape((4,4))\n",
+    "A = np.array([1, -1, 0, 0, 0, 1, -1, 0, 0, 0, 1, -1, -1, 0, 0, 1]).reshape((4, 4))\n",
     "np.linalg.matrix_rank(A)"
    ]
   },
@@ -119,8 +120,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mat = np.array([3,1,0,6,3,2,1,3,5]).reshape((3,3)).T\n",
-    "beta = np.array([2,-1,2]).T\n",
+    "mat = np.array([3, 1, 0, 6, 3, 2, 1, 3, 5]).reshape((3, 3)).T\n",
+    "beta = np.array([2, -1, 2]).T\n",
     "np.linalg.solve(mat, beta)"
    ]
   },
@@ -139,7 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "alpha = np.array([1,1,1,1,0,1,-1,-1,0,0,1,-1,0,0,0,1]).reshape((4,4)).T\n",
+    "alpha = np.array([1, 1, 1, 1, 0, 1, -1, -1, 0, 0, 1, -1, 0, 0, 0, 1]).reshape((4, 4)).T\n",
     "e = np.eye(4)\n",
     "coeff = np.linalg.inv(alpha) @ e\n",
     "for idx in range(4):\n",
@@ -162,8 +163,8 @@
    "outputs": [],
    "source": [
     "# (1)\n",
-    "mat = sp.Matrix(np.array([1,1,1,1,1,1,2,3,4,5,1,0,-1,-2,-3]).reshape(3,5))\n",
-    "b = sp.Matrix(np.zeros((3,1)))\n",
+    "mat = sp.Matrix(3, 5, [1, 1, 1, 1, 1, 1, 2, 3, 4, 5, 1, 0, -1, -2, -3])\n",
+    "b = sp.Matrix(np.zeros((3, 1)))\n",
     "\n",
     "x, params, free_var_index = mat.gauss_jordan_solve(b, freevar=True)\n",
     "x"
@@ -177,8 +178,8 @@
    "outputs": [],
    "source": [
     "# (2)\n",
-    "mat = sp.Matrix(np.array([1,1,1,1,-4,1,-2,3,-4,2,-1,3,-5,7,-4,1,2,-1,4,-6]).reshape(4,5))\n",
-    "b = sp.Matrix(np.zeros((4,1)))\n",
+    "mat = sp.Matrix(4, 5, [1, 1, 1, 1, -4, 1, -2, 3, -4, 2, -1, 3, -5, 7, -4, 1, 2, -1, 4, -6])\n",
+    "b = sp.Matrix(np.zeros((4, 1)))\n",
     "\n",
     "x, params, free_var_index = mat.gauss_jordan_solve(b, freevar=True)\n",
     "x"
@@ -199,8 +200,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = sp.Matrix(np.array([1,2,3,4,5,1,-1,1,-1,1,1,2,4,8,16]).reshape(3,5))\n",
-    "b = sp.Matrix(np.zeros((3,1)))\n",
+    "X = sp.Matrix(3, 5, [1, 2, 3, 4, 5, 1, -1, 1, -1, 1, 1, 2, 4, 8, 16])\n",
+    "b = sp.Matrix(np.zeros((3, 1)))\n",
     "\n",
     "A, params, free_var_index = X.gauss_jordan_solve(b, freevar=True)\n",
     "A"
@@ -237,8 +238,114 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = np.array([1,1,1,1,1,1,2,3,4,5,1,0,-3,-2,-3]).reshape((3,5))\n",
+    "X = np.array([1, 1, 1, 1, 1, 1, 2, 3, 4, 5, 1, 0, -3, -2, -3]).reshape((3, 5))\n",
     "np.linalg.matrix_rank(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2970a35",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "210b629c",
+   "metadata": {},
+   "source": [
+    "## 习题2.7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cdc6d915",
+   "metadata": {},
+   "source": [
+    "### 第1题"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8345500",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alpha_1 = [1, 1, 0, 0]\n",
+    "alpha_2 = [0, 1, 1, 0]\n",
+    "beta_1 = [1, 2, 3, 4]\n",
+    "beta_2 = [0, 1, 2, 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e8d42ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = sp.Matrix([alpha_1, alpha_2, beta_1, beta_2])\n",
+    "# W1 + W2\n",
+    "A.rowspace()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d987f7f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W1_nullspace = [v.T for v in sp.Matrix([alpha_1, alpha_2]).nullspace()]\n",
+    "W2_nullspace = [v.T for v in sp.Matrix([beta_1, beta_2]).nullspace()]\n",
+    "# W1 intersect W2\n",
+    "sp.Matrix(W1_nullspace + W2_nullspace).nullspace()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "005392d1",
+   "metadata": {},
+   "source": [
+    "### 第2题"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e8010a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = sp.Matrix(2, 4, [1, 1, 1, 0, 0, 1, 2, 1])\n",
+    "B = sp.Matrix(2, 4, [1, 2, 4, 2, 0, 1, 4, 3])\n",
+    "\n",
+    "W1 = [v.T for v in A.nullspace()]\n",
+    "W2 = [v.T for v in B.nullspace()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23f96288",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# W1 + W2\n",
+    "sp.Matrix(W1 + W2).rowspace()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95b1cdb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# W1 intersect W2\n",
+    "sp.Matrix(A.rowspace() + B.rowspace()).nullspace()"
    ]
   },
   {
@@ -259,10 +366,50 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e1d8ec59",
+   "metadata": {},
+   "source": [
+    "### 第1题"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8913c3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lam, x, y = sp.symbols(\"\\lambda, x, y\")\n",
+    "f = lam * (x**2 + y**2 - x + 2 * y - 10) + (x**2 + y**2 + 3 * x - 4 * y - 1)\n",
+    "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05e050ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "C = (2, 0)\n",
+    "lam_sol = sp.solve(f.subs(((x, C[0]), (y, C[1]))), lam)[0]\n",
+    "lam_sol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4839a8b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f.subs(((lam, lam_sol),))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ae7f2ddb",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### 第三题"
    ]
@@ -271,9 +418,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6316629c",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def LagrangePolynomial(xs, ys):\n",
@@ -293,9 +438,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5ac78be4",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "xs = np.array([1, 2, 3])\n",
@@ -308,9 +451,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3bbb7a17",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -338,14 +479,14 @@
    "outputs": [],
    "source": [
     "x = sp.Symbol(\"x\")\n",
-    "A = sp.Matrix([[x,1,2,3],[x,x,1,2],[2,3,x,1],[x,2,3,x]])\n",
+    "A = sp.Matrix(4, 4, [x, 1, 2, 3, x, x, 1, 2, 2, 3, x, 1, x, 2, 3, x])\n",
     "A.det()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92f75347",
+   "id": "2ce292fd",
    "metadata": {},
    "outputs": [],
    "source": []
