--- a/main.tex
+++ b/main.tex
@@ -12,7 +12,8 @@
 
 % \input{content/class-1.tex}
 % \input{content/class-2.tex}
-\input{content/class-3.tex}
+% \input{content/class-3.tex}
+\input{content/class-4.tex}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
