--- a/notebooks/习题.ipynb
+++ b/notebooks/习题.ipynb
@@ -411,7 +411,7 @@
    "id": "ae7f2ddb",
    "metadata": {},
    "source": [
-    "### 第三题"
+    "### 第3题"
    ]
   },
   {
@@ -448,9 +448,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a335caef",
+   "metadata": {},
+   "source": [
+    "### 第4题"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bbb7a17",
+   "id": "df91c161",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = sp.symbols(\"x\")\n",
+    "f1 = sp.Poly((x - 1) * (x - 2) * (x - 3))\n",
+    "f2 = sp.Poly(x * (x - 2) * (x - 3))\n",
+    "f3 = sp.Poly(x * (x - 1) * (x - 3))\n",
+    "f4 = sp.Poly(x * (x - 1) * (x - 2))\n",
+    "# (f1, f2, f3, f4) = (1, x, x^2, x^3) \\cdot coeff_mat\n",
+    "coeff_mat = sp.Matrix([f.all_coeffs()[::-1] for f in [f1, f2, f3, f4]]).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1e72841",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# (1, x, x^2, x^3) = (f1, f2, f3, f4) \\cdot coeff_mat^{-1}\n",
+    "coeff_mat.inv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b01903e4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -472,6 +507,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dbc24b34",
+   "metadata": {},
+   "source": [
+    "### 第5题"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8ad3f08e",
@@ -486,7 +529,77 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ce292fd",
+   "id": "686358e5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92c23824",
+   "metadata": {},
+   "source": [
+    "## 习题3.2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f40894d0",
+   "metadata": {},
+   "source": [
+    "### 第1题"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ee66977",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# (1)\n",
+    "A = sp.Matrix(4, 4, [1, 1, 1, 1, 1, -1, 1, -1, 1, 2, 3, 4, 1, 3, 5, 9])\n",
+    "A.det()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6fcc68c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# (3)\n",
+    "x, y = sp.symbols(\"x, y\")\n",
+    "A = sp.Matrix(3, 3, [x, y, x + y, y, x + y, x, x + y, x, y])\n",
+    "A.det()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2860f194",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# (5)\n",
+    "a, b, c, d = sp.symbols(\"a, b, c, d\")\n",
+    "A = sp.Matrix(\n",
+    "    4, 4,\n",
+    "    [\n",
+    "        a, b, c, d,\n",
+    "        a, a+b, a+b+c, a+b+c+d,\n",
+    "        a, 2*a+b, 3*a+2*b+c, 4*a+3*b+2*c+d,\n",
+    "        a, 3*a+b, 6*a+3*b+c, 10*a+6*b+3*c+d,\n",
+    "    ]\n",
+    ")\n",
+    "A.det()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec80b024",
    "metadata": {},
    "outputs": [],
    "source": []
