--- a/content/class-4.tex
+++ b/content/class-4.tex
@@ -4,7 +4,7 @@
 % \renewcommand{\newpageorvspace}{\newpage}
 \renewcommand{\newpageorvspace}{\vspace{2em}}
 
-\date{2022-10-21  第四次习题课}
+\date{2022-10-21 第四次习题课}
 \author{}
 
 \begin{document}
@@ -16,6 +16,8 @@
 {\bf 第一题}. 计算下列行列式。
 
 (1) $D = \begin{vmatrix} 2 & 1 & -1 & 3 \\ 1 & 4 & 1 & 2 \\ -1 & 2 & 1 & 1 \\ 1 & 0 & 2 & 1 \end{vmatrix}$; \hspace{2em} (2) $D_n = \begin{vmatrix} 1 + a_1 & a_2 & a_3 & \cdots & a_n \\ a_1 & 1 + a_2 & a_3 & \cdots & a_n \\ a_1 & a_2 & 1 + a_3 & \cdots & a_n \\ \vdots & \vdots & \vdots & \ddots & \vdots \\ a_1 & a_2 & a_3 & \cdots & 1 + a_n \end{vmatrix}$
+
+\ifIncludeAnswer
 
 \newpageorvspace
 
@@ -36,10 +38,11 @@ D_n & = \det( e_1 + a_1 \gamma, \ldots, e_n + a_n \gamma) \\
 \end{align*}
 这题也可以利用加边的方式进行求解。
 
+\fi  % fi of \ifIncludeAnswer
+
 \newpageorvspace
 
-{\bf 第二题}. 求下列线性方程组的一个特解$\gamma_0$以及导出组的一个基础解系，并用它们表出线
-性方程组的全部解。
+{\bf 第二题}. 求下列线性方程组的一个特解$\gamma_0$以及导出组的一个基础解系，并用它们表出线性方程组的全部解。
 $$
 \begin{cases}
 x_1 - x_2 - 3 x_3 + x_4 + 3 x_5 = 1 \\
@@ -47,6 +50,8 @@ x_1 - x_2 - x_3 + x_4 + x_5 = 1 \\
 x_1 + x_2 + x_3 - x_4 - x_5 = 1
 \end{cases}
 $$
+
+\ifIncludeAnswer
 
 \newpageorvspace
 
@@ -67,6 +72,8 @@ $$
 解得通解为
 $$\begin{pmatrix} 1 \\ 0 \\ 0 \\ 0 \\ 0 \end{pmatrix} + \tau_1 \begin{pmatrix} 0 \\ 1 \\ 0 \\ 1 \\ 0 \end{pmatrix} + \tau_2 \begin{pmatrix} 0 \\ 0 \\ 1 \\ 0 \\ 1 \end{pmatrix}, \quad \tau_1, \tau_2 \in \mathbb{R}.$$
 
+\fi  % fi of \ifIncludeAnswer
+
 \newpageorvspace
 
 {\bf 第三题}. 设$\mathbb{F}$上$n$维线性空间$V$的一组基为$\alpha_1, \alpha_2, \ldots, \alpha_n,$ 令
@@ -75,6 +82,8 @@ $$\beta_k = \alpha_1 + \alpha_2 + \cdots + \alpha_k, \quad k = 1, 2, \ldots, n.$
 \item[(1)] 证明$\beta_1, \beta_2, \ldots, \beta_n$是$V$的一组基；
 \item[(2)] 对于$\alpha = \alpha_1 + 2 \alpha_2 + \cdots + n \alpha_n,$ 求出$\alpha$在基$\beta_1, \beta_2, \ldots, \beta_n$下的坐标。
 \end{itemize}
+
+\ifIncludeAnswer
 
 \newpageorvspace
 
@@ -90,6 +99,8 @@ $A^{-1} \begin{pmatrix} 1 \\ 2 \\ \vdots \\ n \end{pmatrix}$即为$\alpha$在基
 $$\left( \begin{array}{ccccc|c}1 & 1 & 1 & \cdots & 1 & 1 \\ 0 & 1 & 1 & \cdots & 1 & 2 \\ 0 & 0 & 1 & \cdots & 1 & 3 \\ \vdots & \vdots & \ddots & \ddots & \vdots & \vdots \\ 0 & 0 & \cdots & 0 & 1 & n \end{array} \right) \rightarrow \left( \begin{array}{ccccc|c}1 & 0 & 0 & \cdots & 0 & -1 \\ 0 & 1 & 1 & \cdots & 1 & 2 \\ 0 & 0 & 1 & \cdots & 1 & 3 \\ \vdots & \vdots & \ddots & \ddots & \vdots & \vdots \\ 0 & 0 & \cdots & 0 & 1 & n \end{array} \right) \rightarrow \cdots \rightarrow \left( \begin{array}{ccccc|c}1 & 1 & 0 & \cdots & 0 & -1 \\ 0 & 1 & 0 & \cdots & 0 & -1 \\ 0 & 0 & 1 & \cdots & 0 & -1 \\ \vdots & \vdots & \ddots & \ddots & \vdots & \vdots \\ 0 & 0 & \cdots & 0 & 1 & n \end{array} \right)$$
 解得$\alpha$在基$\beta_1, \beta_2, \ldots, \beta_n$下的坐标为$\lambda = (-1, \ldots, -1, n)^T.$
 
+\fi  % fi of \ifIncludeAnswer
+
 \newpageorvspace
 
 {\bf 第四题}. 判断下述结论是否正确，并说明理由。
@@ -98,14 +109,22 @@ $$\left( \begin{array}{ccccc|c}1 & 1 & 1 & \cdots & 1 & 1 \\ 0 & 1 & 1 & \cdots 
 \item[(2)] 若$W$是$V$的子空间，且$\alpha_1 + W, \ldots, \alpha_r + W$是商空间$V / W$的一组基，则$\alpha_1, \ldots, \alpha_r$在$V$中是线性无关的。
 \end{itemize}
 
+\ifIncludeAnswer
+
 \newpageorvspace
 
-{\bf 解}： (1) 正确。用反证法，假设$r < m,$ 那么取向量组$I$的一个极大线性无关组$I' = \{ \alpha_{i_1}, \alpha_{i_2}, \ldots, \alpha_{i_r} \},$ 那么取$I$中不属于$I'$的任意一个向量$\alpha$, 都有$I \setminus \{ \alpha \}$包含$I',$ 从而秩为$r,$ 矛盾。
+{\bf 解}： (1) 正确。
 
-(2) 正确。用反证法，假设$\alpha_1, \ldots, \alpha_r$在$V$中线性相关，那么存在不全为0的数$\lambda_1, \ldots, \lambda_r,$ 使得$\lambda_1 \alpha_1 + \cdots + \lambda_r \alpha_r = 0 \in W.$ 那么
+用反证法，假设$r < m,$ 那么取向量组$I$的一个极大线性无关组$I' = \{ \alpha_{i_1}, \alpha_{i_2}, \ldots, \alpha_{i_r} \},$ 那么取$I$中不属于$I'$的任意一个向量$\alpha$, 都有$I \setminus \{ \alpha \}$包含$I',$ 从而秩为$r,$ 矛盾。
+
+(2) 正确。
+
+用反证法，假设$\alpha_1, \ldots, \alpha_r$在$V$中线性相关，那么存在不全为0的数$\lambda_1, \ldots, \lambda_r,$ 使得$\lambda_1 \alpha_1 + \cdots + \lambda_r \alpha_r = 0 \in W.$ 那么
 $$\lambda_1 (\alpha_1 + W) + \cdots + \lambda_r (\alpha_r + W) = 0 + W.$$
 从这里我们可以看到，$\alpha_1, \ldots, \alpha_r$的选取需要比它们线性无关更强的条件，即要求
 $$\operatorname{span}\{ \alpha_1, \ldots, \alpha_r \} \cap W = \{0\}.$$
+
+\fi  % fi of \ifIncludeAnswer
 
 \newpageorvspace
 
@@ -118,6 +137,8 @@ W_2 = \{ (y_1, \ldots, y_n) \in \mathbb{F}^n \ |\ y_1 - \cdots - y_n = 0 \}. \\
 \item[(1)] 证明$W_1, W_2$都是$V$的子空间，并且$V = W_1 + W_2$.
 \item[(2)] 求$\dim (W_1 \cap W_2)$和$W_1 \cap W_2$的一组基。
 \end{itemize}
+
+\ifIncludeAnswer
 
 \newpageorvspace
 
@@ -139,6 +160,8 @@ $$x = \begin{pmatrix} 0 \\ \tau_1 \\ \vdots \\ \tau_{n-2} \\ -(\tau_1 + \cdots +
 即知$\dim (W_1 + W_2) = n - 2,$ 一组基可以取为
 $$\left\{ \begin{pmatrix} 0 \\ 1 \\ 0 \\ \vdots \\ 0 \\ -1 \end{pmatrix}, \begin{pmatrix} 0 \\ 0 \\ 1 \\ 0 \\ \vdots \\ 0 \\ -1 \end{pmatrix}, \cdots, \begin{pmatrix} 0 \\ \vdots \\ 0 \\ 1 \\ -1 \end{pmatrix} \right\}.$$
 
+\fi  % fi of \ifIncludeAnswer
+
 \newpageorvspace
 
 {\bf 第六题}. 设$\alpha_1, \alpha_2, \ldots, \alpha_r$和$\beta_1, \beta_2, \ldots, \beta_r$分别是$n$维线性空间$V_1$和$V_2$的两组线性无关的向量组，
@@ -147,6 +170,8 @@ $$\left\{ \begin{pmatrix} 0 \\ 1 \\ 0 \\ \vdots \\ 0 \\ -1 \end{pmatrix}, \begin
 $$f(\alpha_i) = \beta_i, i = 1, \ldots, r, \text{ 并且 } \dim(\ker(f)) = n-r,$$
 \item[(2)] 满足上述条件的同态映射是否唯一？并证明你的结论。
 \end{itemize}
+
+\ifIncludeAnswer
 
 \newpageorvspace
 
@@ -169,5 +194,7 @@ $$
 此时，$\operatorname{Im}(f) = \operatorname{span} \{ \beta_1, \beta_2, \ldots, \beta_r \},$ 即有$\dim(\operatorname{Im}(f)) = r,$ 那么根据维数公式有
 $$\dim(\ker(f)) = \dim V_1 - \dim(\operatorname{Im}(f)) = n - r.$$
 同时，根据维数公式可知，条件$f(\alpha_i) \in \operatorname{span} \{ \beta_1, \beta_2, \ldots, \beta_r \}, i = r+1, \ldots, n,$是满足题设条件的同态映射$f$必须要满足的条件。
+
+\fi  % fi of \ifIncludeAnswer
 
 \end{document}
