--- a/main.tex
+++ b/main.tex
@@ -10,6 +10,9 @@
 
 \title{2022秋高等代数习题课}
 
+\IncludeAnswertrue
+% \IncludeAnswerfalse
+
 % \input{content/class-1.tex}
 % \input{content/class-2.tex}
 % \input{content/class-3.tex}
