--- a/content/class-1.tex
+++ b/content/class-1.tex
@@ -23,6 +23,8 @@
 \end{table}
 问：$y$是否可能是$x$的二次函数？如果可能，试求出满足要求的二次函数。
 
+\ifIncludeAnswer
+
 \newpageorvspace
 
 {\bf 解}：假设$y$是$x$的二次函数，即存在实数$a,b,c$使得
@@ -80,6 +82,8 @@ LagrangePolynomial(xs, ys)
 \end{lstlisting}
 \end{center}
 
+\fi  % fi of \ifIncludeAnswer
+
 \newpageorvspace
 
 {\bf 习题1.2 第4题} 在实数范围内解线性方程组
@@ -92,6 +96,8 @@ x + 3y + 2z = 4 \\
 这个方程组的解集在3维空间中的图像$\Pi$是什么？
 
 将这个方程组的常数项全部变成0，得到的方程组的解集在3维空间中的图像$\Pi_0$是什么？$\Pi_0$与$\Pi$有什么关系？
+
+\ifIncludeAnswer
 
 \newpageorvspace
 
@@ -110,6 +116,8 @@ $$\begin{pmatrix}[ccc|c]
 
 将这个方程组的常数项全部变成0，得到的方程组的解集在3维空间中的图像$\Pi_0$一条过原点的直线。$\Pi_0$与$\Pi$之间可以通过平移相互得到，即$\Pi = \Pi_0 + \begin{pmatrix} -23 \\ 9 \\ 0 \end{pmatrix}$，$\begin{pmatrix} -23 \\ 9 \\ 0 \end{pmatrix}$可以换为原非齐次线性方程组的任意一个特解。
 
+\fi  % fi of \ifIncludeAnswer
+
 \newpageorvspace
 
 {\bf 习题1.3 第2题} 讨论当$\lambda$取什么值时下面的方程组有解
@@ -119,6 +127,8 @@ x_1 + \lambda x_2 + x_3 = \lambda \\
 x_1 + x_2 + \lambda x_3 = \lambda^2 \\
 \end{cases}$$
 当方程组有解时求出解来，并讨论$\lambda$取什么值时方程组有唯一解，什么时候有无穷多组解。
+
+\ifIncludeAnswer
 
 \newpageorvspace
 
@@ -190,6 +200,8 @@ linsolve(
 \end{lstlisting}
 \end{center}
 
+\fi  % fi of \ifIncludeAnswer
+
 \newpageorvspace
 
 {\bf 习题1.1 第2题} (1). 求证：如果复数集合的子集$P$包含至少一个非零数，并且对加、减、乘、除（除数不为$0$）封闭，则$P$包含$0,1$，从而是数域。
@@ -199,6 +211,8 @@ linsolve(
 (3). 求证：集合$F = \{ a+b\sqrt{2} \ |\ a,b\in\mathbb{Q} \}$ 是数域。（其中$\mathbb{Q}$是有理数域。）
 
 (4). 试求包含$\sqrt[3]{2}$ 的最小的数域。
+
+\ifIncludeAnswer
 
 \newpageorvspace
 
@@ -257,5 +271,7 @@ $$\varphi : F \to \mathbb{Q}(\sqrt[3]{2}), \overline{x} \mapsto \sqrt[3]{2}$$
     \item $F$关于加、减、乘、除封闭。加、减、乘封闭很容易验证。任取$f(x) \in \mathbb{Q}[x] \setminus m(x)\cdot\mathbb{Q}[x]$，即$\overline{f} \neq 0 \in F$，那么$f(x)$与$m(x)$互素，即他们的最大公因子为$1$，记作$(f(x), m(x)) = 1$。于是（通过辗转相除法）存在$g_1(x), g_2(x) \in \mathbb{Q}[x]$，使得$g_1(x)f(x) + g_2(x)m(x) = 1$，于是$\overline{f}$在$F$中的逆元即为$\overline{g}_1$。
     \item $\varphi$是一个一一对应（且保运算，即是一个域同构）。
 \end{itemize}
+
+\fi  % fi of \ifIncludeAnswer
 
 \end{document}
