--- a/content/class-2.tex
+++ b/content/class-2.tex
@@ -13,6 +13,8 @@
 
 {\bf 第一题}. 设$\alpha_1, \ldots, \alpha_n$线性无关。令$\beta_j = a_{j1}\alpha_1 + \cdots + a_{jn}\alpha_n,$ $j = 1, \ldots, n.$ 令$\gamma_j = \begin{pmatrix} a_{j1} \\ \vdots \\ a_{jn} \end{pmatrix},$ $j = 1, \ldots, n.$ 证明$\beta_1, \ldots, \beta_n$线性无关 $\Longleftrightarrow$ $\gamma_1, \ldots, \gamma_n$ 线性无关。
 
+\ifIncludeAnswer
+
 \newpageorvspace
 
 {\bf 证明}：$\Longrightarrow$: 假设$\gamma_1, \ldots, \gamma_n$ 线性相关，那么存在不全为0的数$\lambda_1, \ldots, \lambda_n$使得
@@ -45,6 +47,8 @@ $$
 $$0 = \begin{pmatrix} 0 \\ \vdots \\ 0 \end{pmatrix} = \begin{pmatrix} \lambda_1 a_{11} + \cdots + \lambda_n a_{n1} \\ \vdots \\ \lambda_1 a_{1n} + \cdots + \lambda_n a_{nn} \end{pmatrix} = \lambda_1 \begin{pmatrix} a_{11} \\ \vdots \\ a_{1n} \end{pmatrix} + \cdots + \lambda_n \begin{pmatrix} a_{n1} \\ \vdots \\ a_{nn} \end{pmatrix} = \lambda_1 \gamma_1 + \cdots + \lambda_n \gamma_n.$$
 这与$\gamma_1, \ldots, \gamma_n$ 线性无关矛盾。
 
+\fi  % fi of \ifIncludeAnswer
+
 \newpageorvspace
 
 {\bf 习题2.2 第6题}. 设向量组$\alpha_1, \ldots, \alpha_n$的秩是$r.$ 求证：
@@ -52,6 +56,8 @@ $$0 = \begin{pmatrix} 0 \\ \vdots \\ 0 \end{pmatrix} = \begin{pmatrix} \lambda_1
 (1). $\alpha_1, \ldots, \alpha_n$中任意$r$个线性无关向量都是极大线性无关组。
 
 (2). 设$\alpha_1, \ldots, \alpha_n$能被其中某$r$个向量$\beta_1, \ldots, \beta_r$线性表出，则$\beta_1, \ldots, \beta_r$线性无关。
+
+\ifIncludeAnswer
 
 \newpageorvspace
 
@@ -79,17 +85,25 @@ t_1 \alpha_{i_1} + \cdots + t_r \alpha_{i_r} & = t_1 (a_{11}\beta_1 + \cdots + a
 $$x_1 \alpha_{i_1} + \cdots + x_r \alpha_{i_r} = (\beta_1, \ldots, \beta_r) A \begin{pmatrix} x_1 \\ \vdots \\ x_r \end{pmatrix} = (\beta_1, \ldots, \beta_r) \begin{pmatrix} \lambda_1 \\ \vdots \\ \lambda_r \end{pmatrix} = \lambda_1\beta_1 + \cdots + \lambda_r\beta_r = 0$$
 这还是与$\alpha_{i_1}, \ldots, \alpha_{i_r}$是线性无关组矛盾。故假设不成立，$\beta_1, \ldots, \beta_r$必定是线性无关的。
 
+\fi  % fi of \ifIncludeAnswer
+
 \newpageorvspace
 
 {\bf 习题2.2 第7题}. 证明：若向量组(I)可以由向量组(II)线性表出，则(I)的秩不超过(II)的秩。
+
+\ifIncludeAnswer
 
 \newpageorvspace
 
 {\bf 解}： 这其实已经在上一题（习题2.2 第6题第(2)问）中证明了，因为在证明过程中，我们并没有假设$\beta_1, \cdots, \beta_r$是取自$\alpha_1, \ldots, \alpha_n$中的。事实上，假设向量组(I)秩为$r$，可以由秩为$s$的向量组(II)线性表出，且$r > s$, 那么取向量组(II)的一个极大线性无关组，再从向量组(II)可重复地随机添加$r-s$个向量，构成一个数量为$r$的向量组，那么这个向量组可以线性表出向量组(I)可以由这个向量组线性表出。根据上一题结论，这个向量组秩为$r$，矛盾。
 
+\fi  % fi of \ifIncludeAnswer
+
 \newpageorvspace
 
 {\bf 第四题}. 设$A$是$\mathbb{R}$上$n$阶方阵。若$\lvert a_{ii} \rvert > \sum\limits_{j\neq i} \lvert a_{ij} \rvert,$ $i = 1, \ldots, n,$ 求矩阵$A$的秩$r(A)$.
+
+\ifIncludeAnswer
 
 \newpageorvspace
 
@@ -116,9 +130,13 @@ D(a_{ii}, R_{i}) & = \left\{ x \in \mathbb{C} \ |\ \lvert x - a_{ii} \rvert \leq
 那么$A$的每个{\color{red}特征值}都落在某个$D(a_{ii}, R_{i})$中。
 \end{quote}
 
+\fi  % fi of \ifIncludeAnswer
+
 \newpageorvspace
 
 {\bf 习题2.3 第6题}. 设$S, T$是向量组。求证：$S$与$T$等价$\Longleftrightarrow$ $\operatorname{rank} S = \operatorname{rank} (S\cup T) = \operatorname{rank} T.$
+
+\ifIncludeAnswer
 
 \newpageorvspace
 
@@ -128,9 +146,13 @@ $\Longleftarrow$: 令向量组$S\cup T$的秩为$r$. 任取$S$的一个极大线
 
 同样地可以证明$S$能被$T$线性表出。二者可以相互线性表出，所以它们是线性等价的。
 
+\fi  % fi of \ifIncludeAnswer
+
 \newpageorvspace
 
 {\bf 习题2.3 第7题}. 求证：两个齐次线性方程组(I), (II)同解的充分必要条件是他们互为线性组合。
+
+\ifIncludeAnswer
 
 \newpageorvspace
 
@@ -149,5 +171,7 @@ $\begin{pmatrix}A_1 \\ A_2\end{pmatrix} X = 0$的解空间是$A_1X = 0$(或$A_2X
 $$n - \operatorname{rank} (S_1\cup S_2) = n - \operatorname{rank} S_1 ~~ (\text{或} ~~ n - \operatorname{rank} S_2),$$
 即
 $$\operatorname{rank} (S_1\cup S_2) = \operatorname{rank} S_1 ~~ (\text{或} ~~ \operatorname{rank} S_2).$$
+
+\fi  % fi of \ifIncludeAnswer
 
 \end{document}
