--- a/content/class-3.tex
+++ b/content/class-3.tex
@@ -43,6 +43,8 @@ $$
 
 {\bf 第一题}. 设$V_1, V_2$是$\mathbb{F}$上线性空间，$f$是$V_1$到$V_2$的一个同构映射，证明$f^{-1}$是$V_2$到$V_1$的同构映射。
 
+\ifIncludeAnswer
+
 \newpageorvspace
 
 {\bf 证明}： 首先，由于$f$是$V_1$到$V_2$的一个同构映射，那么它是一个一一映射，故$f^{-1}$也是一一映射。接下来，我们只要证明$f^{-1}$是一个线性空间之间的同态映射即可。任取$\beta_1, \beta_2 \in V_2,$ 设$\alpha_1, \alpha_2 \in V_1$分别为$\beta_1, \beta_2$在$f$下的（唯一的）原像。那么任取两个数$\lambda_1, \lambda_2,$ 由于$f$是线性空间的同态映射，所以有
@@ -50,9 +52,13 @@ $$f(\lambda_1 \alpha_1 + \lambda_2 \alpha_2) = \lambda_1 f(\alpha_1) + \lambda_2
 由于$f$是一一映射，所以$\lambda_1 \beta_1 + \lambda_2 \beta_2$的在$f$下的原像即是$\lambda_1 \alpha_1 + \lambda_2 \alpha_2.$ 那么
 $$f^{-1}(\lambda_1 \beta_1 + \lambda_2 \beta_2) = \lambda_1 \alpha_1 + \lambda_2 \alpha_2 = \lambda_1 f^{-1}(\beta_1) + \lambda_2 f^{-1}(\beta_2).$$
 
+\fi  % fi of \ifIncludeAnswer
+
 \newpageorvspace
 
 {\bf 习题2.8 第3题}. 求多项式$f(x)$使$f(1) = 1, f(2) = 2, f(3) = 4.$ 这样的多项式$f(x)$是否可能是整系数多项式？
+
+\ifIncludeAnswer
 
 \newpageorvspace
 
@@ -81,9 +87,13 @@ $$\begin{cases}
 $$3 = 2a_m + 2a_{m-2} + \cdots 2a_1,$$
 这是不可能成立的。
 
+\fi  % fi of \ifIncludeAnswer
+
 \newpageorvspace
 
 {\bf 第三题}. 已知$\mathbb{F}$上线性空间$V$的有限个真子空间之并不等于$V.$ 若$\dim(V) = n,$ $V_1, \ldots, V_s$是$V$的$s$个真子空间。证明$\displaystyle V \setminus \bigcup_{i=1}^s V_i$中包含$V$的一组基。
+
+\ifIncludeAnswer
 
 \newpageorvspace
 
@@ -104,20 +114,28 @@ $$S = S\cap (\bigcup\limits_{j\neq i} V_j) = \bigcup\limits_{j\neq i} (S \cap V_
 那么$S = \mathbb{F}v + u$的元素个数即不能超过$s-1$，这与域$\mathbb{F}$是特征为0的域，元素个数无穷多是矛盾的。所以$V_1\cup V_2\cup \cdots \cup V_s = V$的假设不成立。因此，对任意正整数$s$，以及$V$的真子空间$V_1,\cdots,V_s$，都有
 $$V_1\cup V_2\cup \cdots \cup V_s \subsetneqq V.$$
 
+\fi  % fi of \ifIncludeAnswer
+
 \newpageorvspace
 
 {\bf 第四题}. 给定$n$元排列$(j_1j_2\cdots j_n),$ 若$\tau(j_1j_2\cdots j_n) = r,$ 求$n$元排列$(j_n\cdots j_2j_1)$的逆序数$\tau(j_n\cdots j_2j_1)$.
+
+\ifIncludeAnswer
 
 \newpageorvspace
 
 {\bf 解}： 一个$n$元排列的序关系总共有$n(n-1)/2$对。排列$(j_1j_2\cdots j_n)$中的顺序关系是排列$(j_n\cdots j_2j_1)$中的逆序关系；排列$(j_1j_2\cdots j_n)$中的逆序关系是排列$(j_n\cdots j_2j_1)$中的顺序关系。因此
 $$\tau(j_n\cdots j_2j_1) = n(n-1)/2 - \tau(j_1j_2\cdots j_n) = n(n-1)/2 - r.$$
 
+\fi  % fi of \ifIncludeAnswer
+
 \newpageorvspace
 
 {\bf 习题2.1 第7题}. (1). 若$\alpha_1, \ldots, \alpha_n$线性无关，问$\alpha_1 + \alpha_2, \alpha_2 + \alpha_3, \ldots, \alpha_{n-1} + \alpha_n, \alpha_n + \alpha_1$是否一定线性无关？为什么？
 
 (2). 若$\alpha_1, \ldots, \alpha_n$线性相关，问$\alpha_1 + \alpha_2, \alpha_2 + \alpha_3, \ldots, \alpha_{n-1} + \alpha_n, \alpha_n + \alpha_1$是否一定线性相关？为什么？
+
+\ifIncludeAnswer
 
 \newpageorvspace
 
@@ -165,9 +183,13 @@ $$(\alpha_1+\bcancel{\alpha_2}) - (\bcancel{\alpha_2}+\bcancel{\alpha_3}) + (\bc
 
 当$n$为奇数时，化简后的系数矩阵满秩，此时$\alpha_1+\alpha_2, \alpha_2+\alpha_3, \cdots, \alpha_n+\alpha_1$线性相关当且仅当$\alpha_1, \alpha_2, \cdots, \alpha_n$线性相关。
 
+\fi  % fi of \ifIncludeAnswer
+
 \newpageorvspace
 
 {\bf 习题2.1 第8题}. 设复数域上的向量$\alpha_1, \ldots, \alpha_n$线性无关。$\lambda$取什么复数值的时候，向量$\alpha_1 - \lambda \alpha_2, \alpha_2 - \lambda \alpha_3, \ldots, \alpha_{n-1} - \lambda \alpha_n, \alpha_n - \lambda \alpha_1$线性无关？
+
+\ifIncludeAnswer
 
 \newpageorvspace
 
@@ -208,6 +230,8 @@ A = \begin{pmatrix}
 $$
 若$\alpha_1,\cdots,\alpha_n$线性无关，则只需要$1-\lambda^{n} \neq 0$，即$\lambda$不取$n$次单位根$e^{2k\pi i/n},$ $k = 0, \ldots, n-1,$ 即可使$\alpha_1-\lambda\alpha_2,\cdots,\alpha_n-\lambda\alpha_1$线性无关。
 
+\fi  % fi of \ifIncludeAnswer
+
 \newpageorvspace
 
 {\bf 习题2.5 第4题}. 设向量组$S = \{ \alpha_1, \ldots, \alpha_s \}$线性无关，并且可以由向量组$T = \{ \beta_1, \ldots, \beta_t \}$线性表出。求证：
@@ -217,6 +241,8 @@ $$
 (2) 将$S$扩充为$S \cup T$的一个极大线性无关组$T_1 = \{ \alpha_1, \ldots, \alpha_s, \beta_{i_1}, \ldots, \beta_{i_k} \},$ 则$T_1$与$T$线性等价，且$s+k \leqslant t.$
 
 (3) (Steinitz替换定理) 可以用向量$\alpha_1, \ldots, \alpha_s$替换向量$\beta_1, \ldots, \beta_t$中某$s$个向量$\beta_{i_1}, \ldots, \beta_{i_s},$ 使得得到的向量组$\{ \alpha_1, \ldots, \alpha_s, \beta_{i_{s+1}}, \ldots, \beta_{i_t} \}$与$\{ \beta_1, \ldots, \beta_t \}$等价。
+
+\ifIncludeAnswer
 
 \newpageorvspace
 
@@ -234,5 +260,7 @@ $$s+k = \operatorname{rank}(T_1) = \operatorname{rank}(T) \leqslant \# T = t.$$
 (3) 我们利用第(2)问中的结论，将$S$扩充为$S \cup T$的一个极大线性无关组$T_1$, 设其元素个数为$s+k.$ 我们从$T$中不在$T_1$中的向量（总共有$t - k \geqslant s$个）随意挑出$s$个，那么剩下的向量与$S$并在一起得到的向量组，记作$T_2,$就满足
 $$T_1 \subseteq T_2 \subseteq S \cup T.$$
 因为$T_1$是$S \cup T$的极大线性无关组，所以$T_1, T_2, S \cup T$三者线性等价，从而与$T$线性等价。
+
+\fi  % fi of \ifIncludeAnswer
 
 \end{document}
