--- a/main.tex
+++ b/main.tex
@@ -17,6 +17,7 @@
 % \input{content/class-2.tex}
 % \input{content/class-3.tex}
 \input{content/class-4.tex}
+% \input{content/class-5.tex}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
