--- a/content/class-4.tex
+++ b/content/class-4.tex
@@ -93,6 +93,8 @@ $$(\beta_1, \beta_2, \ldots, \beta_n) = (\alpha_1, \alpha_2, \ldots, \alpha_n) \
 $$0 = (\beta_1, \beta_2, \ldots, \beta_n) \underbrace{ \begin{pmatrix} \lambda_1 \\ \vdots \\ \lambda_n \end{pmatrix} }_{\text{记作} \lambda} = (\alpha_1, \alpha_2, \ldots, \alpha_n) A \lambda.$$
 由于$\alpha_1, \alpha_2, \ldots, \alpha_n$是基，线性无关，所以要使上式成立，必须有$A\lambda = 0.$ 但是方阵$A$满秩，所以$A\lambda = 0$只能有零解，矛盾。
 
+另一种解法：容易看出有$\alpha_1 = \beta_1, \alpha_k = \beta_k - \beta_{k-1}, k = 1, \ldots, n.$ 即$\alpha_1, \ldots, \alpha_n$能由$\beta_1, \ldots, \beta_n$线性表出。故$\beta_1, \ldots, \beta_n$的秩大于等于$\alpha_1, \ldots, \alpha_n$的秩。由于$\alpha_1, \ldots, \alpha_n$是基，故秩只能相等，从而知$\beta_1, \ldots, \beta_n$也是一组基。这种解法相当于把矩阵$A$的逆求出来了。
+
 (2) 沿用上一小题记号，我们设$\alpha$在基$\beta_1, \beta_2, \ldots, \beta_n$下的坐标为$\lambda = (\lambda_1, \ldots, \lambda_n)^T,$ 那么
 \begin{align*}
 \alpha & = \alpha_1 + 2 \alpha_2 + \cdots + n \alpha_n = (\alpha_1, \alpha_2, \ldots, \alpha_n) \begin{pmatrix} 1 \\ 2 \\ \vdots \\ n \end{pmatrix} \\
@@ -145,7 +147,7 @@ W_2 = \{ (y_1, \ldots, y_n) \in \mathbb{F}^n \ |\ y_1 - \cdots - y_n = 0 \}. \\
 
 \newpageorvspace
 
-{\bf 解}： (1) 这题可以根据定义去验证，也可以通过$W_1, W_2$是两个线性方程（组）的解空间来说明他们是$V$的子空间。关于维数关系，我们有
+{\bf 解}： (1) 这题可以根据定义去验证，也可以通过$W_1, W_2$是两个齐次线性方程（组）的解空间来说明他们是$V$的子空间。关于维数关系，我们有
 $$\dim (W_1 + W_2) = \dim(W_1) + \dim(W_2) - \dim(W_1 \cap W_2) = (n - 1) + (n - 1) - \dim(W_1 \cap W_2).$$
 $W_1 \cap W_2$是线性方程组
 $$
@@ -201,6 +203,12 @@ $$\ker f = \{ \alpha_1 - \alpha_i \ |\ i = r + 1, \ldots, n \},$$
 再得到上述空间的维数为$n - r.$
 
 同时，根据维数公式可知，条件$f(\alpha_i) \in \operatorname{span} \{ \beta_1, \beta_2, \ldots, \beta_r \}, i = r+1, \ldots, n,$是满足题设条件的同态映射$f$必须要满足的条件。
+
+注：线性空间之间的同态映射（这里就是线性映射）完全由它在定义域（$V_1$）上每个元素的取值唯一决定，如果两个$V_1$到$V_2$的线性映射在$V_1$中的每个向量上的取值都一样，那么它们就是相等的，是同一个线性映射。当$V_1$取定了一组基$\alpha_1, \ldots, \alpha_n$之后，$V_1$中的每个元素$\alpha$都可以唯一表示为$\alpha_1, \ldots, \alpha_n$的线性组合
+$$\alpha = \lambda_1(\alpha) \alpha_1 + \cdots + \lambda_n(\alpha) \alpha_n,$$
+这里的$\lambda_i(\alpha)$指的是一些由$\alpha$（唯一）决定的数。作为线性映射，$f$就必须满足
+$$f(\alpha) = \lambda_1(\alpha) f(\alpha_1) + \cdots + \lambda_n(\alpha) f(\alpha_n).$$
+于是，只要在基$\alpha_1, \ldots, \alpha_n$上的取值（值是$V_2$中的向量）确定了，那么在$V_1$中每个向量上的取值就确定了，这个线性映射就唯一确定了。
 
 \fi  % fi of \ifIncludeAnswer
 
