update notebook 习题

--- a/notebooks/习题.ipynb
+++ b/notebooks/习题.ipynb
@@ -36,6 +36,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1b4b1790",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from functools import reduce\n",
+    "from typing import Sequence, Union\n",
+    "from numbers import Number\n",
+    "\n",
+    "def vandermonde_det(arr: Sequence[Number]) -> Number:\n",
+    "    return reduce(lambda a, b: a * b, [(arr[j] - arr[i]) for i in range(len(arr)-1) for j in range(i+1, len(arr))])\n",
+    "\n",
+    "def vandermonde_mat(arr: Sequence[Number], latex: bool = False) -> Union[str, Number]:\n",
+    "    n = len(arr)\n",
+    "    mat = sp.Matrix(n, n, [item**i for i in range(n) for item in arr])\n",
+    "    if latex:\n",
+    "        return sp.latex(mat)\n",
+    "    return mat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2f968e27",
    "metadata": {},
    "outputs": [],
@@ -599,7 +621,110 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec80b024",
+   "id": "2c5c4ad7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "630e2168",
+   "metadata": {},
+   "source": [
+    "## 习题3.4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abd82c44",
+   "metadata": {},
+   "source": [
+    "### 第1题"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "153146a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mat = sp.Matrix(4, 4, [2, 1, -5, 1, 1, -3, 0, -6, 0, 2, -1, 2, 1, 4, -7, 6])\n",
+    "b = sp.Matrix(4, 1, [4, 3, -5, 0])\n",
+    "mat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "feef317a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(mat.det())\n",
+    "for i in range(4):\n",
+    "    new_mat = mat.copy()\n",
+    "    new_mat[:, i] = b\n",
+    "    print(new_mat.det())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63de155c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mat.inv() @ b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2faea0f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4702490",
+   "metadata": {},
+   "source": [
+    "### 第4题"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0c32f36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lam = sp.symbols(\"lambda\")\n",
+    "# (1)\n",
+    "mat1 = sp.Matrix(2, 2, [1+lam, 1-lam, 1-lam, 1+lam])\n",
+    "# (2)\n",
+    "mat2 = sp.Matrix(3, 3, [lam, 1, 0, 1, lam, 1, 0, 1, lam])\n",
+    "# (3)\n",
+    "mat3 = sp.Matrix(3, 3, [-lam, 1, 1, 1, -lam, 1, 1, 1, -lam])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e22532c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for mat in [mat1, mat2, mat3]:\n",
+    "    print(sp.roots(mat.det(), multiple=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4542e144",
    "metadata": {},
    "outputs": [],
    "source": []
