update list of assignments and notebooks

--- a/notebooks/习题.ipynb
+++ b/notebooks/习题.ipynb
@@ -52,7 +52,21 @@
     "    mat = sp.Matrix(n, n, [item**i for i in range(n) for item in arr])\n",
     "    if latex:\n",
     "        return sp.latex(mat)\n",
-    "    return mat"
+    "    return mat\n",
+    "\n",
+    "def circulant_mat(arr: Sequence[Number]) -> Number:\n",
+    "    n = len(arr)\n",
+    "    mat = np.vstack([np.concatenate((arr[i:], arr[:i])) for i in range(n)])\n",
+    "    mat = sp.Matrix(mat)\n",
+    "    return mat\n",
+    "\n",
+    "def circulant_det(arr: Sequence[Number]) -> Number:\n",
+    "    # n = len(arr)\n",
+    "    # u = sp.exp(2 * sp.pi * complex(0, 1) / n)\n",
+    "    # sp_arr = sp.Matrix(n, 1, arr)\n",
+    "    # mat = sp.Matrix(n, n, [pow(pow(u, i), j) for i in range(n) for j in range(n)])\n",
+    "    # return reduce(lambda a, b: a * b, mat @ sp_arr)\n",
+    "    return circulant_mat(arr).det()"
    ]
   },
   {
