update the list of assignments

--- a/content/class-5.tex
+++ b/content/class-5.tex
@@ -21,7 +21,7 @@ $$\begin{pmatrix} \dfrac{1}{2} A & - \dfrac{\sqrt{3}}{2} A \\ \dfrac{\sqrt{3}}{2
 \begin{align*}
 \begin{pmatrix} \dfrac{1}{2} A & - \dfrac{\sqrt{3}}{2} A \\ \dfrac{\sqrt{3}}{2} A & \dfrac{1}{2} A \end{pmatrix}^{2000} & = \begin{pmatrix} A & \\ & A \end{pmatrix}^{2000} M^{2000} = \begin{pmatrix} A^{2000} & \\ & A^{2000} \end{pmatrix} \begin{pmatrix} \cos 2000\theta I_n & - \sin 2000\theta I_n \\ \sin 2000\theta I_n & \cos 2000\theta I_n \end{pmatrix} \\
 & = \begin{pmatrix} A^2 & \\ & A^2 \end{pmatrix} \begin{pmatrix} \cos 2\theta I_n & - \sin 2\theta I_n \\ \sin 2\theta I_n & \cos 2\theta I_n \end{pmatrix} = \begin{pmatrix} A^2 & \\ & A^2 \end{pmatrix} \begin{pmatrix} \dfrac{1}{2} I_n & \dfrac{\sqrt{3}}{2} I_n \\ - \dfrac{\sqrt{3}}{2} I_n & \dfrac{1}{2} I_n \end{pmatrix} \\
-& = \begin{pmatrix} \dfrac{1}{2} A^2 & \dfrac{\sqrt{3}}{2} A^2 \\ - \dfrac{\sqrt{3}}{2} A^2 & \dfrac{1}{2} A^2 \end{pmatrix}^{2000}
+& = \begin{pmatrix} \dfrac{1}{2} A^2 & \dfrac{\sqrt{3}}{2} A^2 \\ - \dfrac{\sqrt{3}}{2} A^2 & \dfrac{1}{2} A^2 \end{pmatrix}.
 \end{align*}
 
 \fi  % fi of \ifIncludeAnswer
